2013-10-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58794
	* c-c++-common/torture/pr58794-1.c: New testcase.
	* c-c++-common/torture/pr58794-2.c: Likewise.

2013-10-21  Richard Biener  <rguenther@suse.de>

	PR middle-end/58742
	* c-c++-common/fold-divmul-1.c: New testcase.

2013-10-21  Michael Zolotukhin  <michael.v.zolotukhin@gmail.com>

	* gcc.target/i386/memset-vector_loop-1.c: New test.
	* gcc.target/i386/memset-vector_loop-2.c: New test.

2013-10-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/mips-ps-5.c: Add alignment attributes.
	* gcc.target/mips/mips-ps-7.c: Likewise.

2013-10-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/bswap-1.c, gcc.target/mips/bswap-2.c,
	gcc.target/mips/bswap-3.c, gcc.target/mips/bswap-4.c,
	gcc.target/mips/bswap-5.c, gcc.target/mips/bswap-6.c: New tests.

2013-10-19  John David Anglin  <danglin@gcc.gnu.org>

	* c-c++-common/opaque-vector.c: Skip long double test on hppa.

	PR testsuite/58645
	* gnat.dg/specs/linker_alias.ads: Skip on hppa*-*-hpux*.

2013-10-19  Mike Stump  <mikestump@comcast.net>

	* g++.dg/lto/lto.exp: Add support for C/C++ mix language testing.

	* gcc.dg/lto/pr54625-1_0.c: Move from here...
	* g++.dg/lto/pr54625-1_0.c: ... to here.
	* gcc.dg/lto/pr54625-1_1.C: Likewise.
	* g++.dg/lto/pr54625-1_1.C: Likewise.
	* gcc.dg/lto/pr54625-2_0.c: Likewise.
	* g++.dg/lto/pr54625-2_0.c: Likewise.
	* gcc.dg/lto/pr54625-2_1.C: Likewise.
	* g++.dg/lto/pr54625-2_1.C: Likewise.

2013-10-19  Oleg Endo  <olegendo@gcc.gnu.org>

	* gcc.target/sh/pr54089-3.c: Fix test for load of constant 31.

2013-10-18  Cong Hou  <congh@google.com>

	* gcc.dg/vect/pr58508.c: New test.

2013-10-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58466
	* g++.dg/cpp0x/variadic145.C: New.

2013-10-18  Andrew MacLeod  <amacleod@redhat.com>

	* g++.dg/plugin/header_plugin.c: Don't include tree-flow.h.

2013-10-18  Hans-Peter Nilsson  <hp@axis.com>
